<resources>
    <string name="app_name">BoaViagem</string>
    <string name="usuario">Usuário:</string>
    <string name="senha">Senha:</string>
    <string name="entrar">Entrar:</string>
    <string name="title_activity_boa_viagem">BoaViagemActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="erro_autenticao">Usuário ou senha inválidos</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="nova_viagem">Nova Viagem</string>
    <string name="minhas_viagens">Minhas Viagens</string>
    <string name="configuracoes">Configurações</string>
    <string name="novo_gasto">Novo Gasto</string>
    <string name="title_activity_viagem">ViagemActivity</string>
    <string name="destino">Destino</string>
    <string name="tipo_da_viagem">Tipo da Viagem</string>
    <string name="data_da_chegada">Data de Chegada</string>
    <string name="data_da_saida">Data de Saída</string>
    <string name="selecione">Selecione:</string>
    <string name="orcamento">Orçamento</string>
    <string name="quantidade_de_pessoas">Quantidade de Pessoas:</string>
    <string name="salvar">Salvar</string>
    <string name="lazer">Lazer</string>
    <string name="negocios">Negócios</string>
    <string name="title_activity_gasto">gasto</string>
    <string name="valor">Valor</string>
    <string name="data">Data</string>
    <string name="descricao">Descrição</string>
    <string name="local">Local</string>
    <string name="gastei">Gastei</string>
    <string name="categoria">Categoria</string>

<!-- ArrayAdapter e o SimpleAdapter que podem ser utilizados para criar os itens do spinner.
 ArrayAdapter que permite, por exemplo, carregar diretamente uma lista de op ções defiidas em um arquivo de recurso. -->
    <string-array name="categoria_gasto">
        2 <item>Alimentação</item>
        3 <item>Combustível</item>
        4 <item>Transporte</item>
        5 <item>Hospedagem</item>
        6 <item>Outros</item>
        7 </string-array>
    <string name="title_activity_viagem_list">Lista de Viagens</string>
    <string name="title_activity_gasto_list">Lista de Gastos</string>
    <string name="sair">Sair</string>
    <string name="remover_viagem">Remover Viagem</string>
    <string name="remover">Remover</string>
    <string name="editar">Editar</string>
    <string name="gastos_realizados">Gastos Realizados</string>
    <string name="opcoes">Opções</string>
    <string name="confirmacao_exclusao_viagem">Confirma Exclusão da Viagem?</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="preferencias">Preferências</string>
    <string name="modo_viagem_sumario">Sumário Modo Viagem</string>
    <string name="modo_viagem">Modo Viagem</string>
    <string name="informe_valor_limite">Informe o Valor Limite</string>
    <string name="valor_limite_sumario">Valor Limite Sumario</string>
    <string name="valor_limite">Valor Limite</string>
    <string name="title_activity_configuracoes">Configuracoes</string>
    <string name="manter_conectado">Manter Conectado?</string>
</resources>
