<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#015488"
            android:orientation="vertical" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/novo_gasto"
                android:textAppearance=
                    "?android:attr/textAppearanceLarge"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/destino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAppearance=
                    "?android:attr/textAppearanceLarge"
                android:textStyle="bold" />


        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/categoria" />

        <!-- As opcoes nao disponiveis cada item do Spinner é uma view-fiha que é proveniente de um SpinnerAdapter.  Ao carrega-lo  atribuí-lo ao spinner para que as op ções possam ser exibidas. -->
        <!-- ArrayAdapter e o SimpleAdapter que podem ser utilizados para criar os itens do spinner.
 ArrayAdapter que permite, por exemplo, carregar diretamente uma lista de op ções defiidas em um arquivo de recurso. -->
        <Spinner
            android:id="@+id/categoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/categoria" > <!-- representa quando o titulo a list quando opcoes da lista tive aberta -->
        </Spinner>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="0,1">
            <TableRow>
                <TextView android:text="@string/valor" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/data" />
            </TableRow>
            <TableRow>
                <EditText
                    android:id="@+id/valor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />
                <Button
                    android:id="@+id/data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:onClick="selecionarData"
                    android:text="@string/selecione" />
            </TableRow>
        </TableLayout>

        <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descricao" />
        <EditText
            android:id="@+id/descricao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/local" />
        <EditText
            android:id="@+id/local"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="registrarGasto"
            android:text="@string/gastei" />

    </LinearLayout>
</ScrollView>